<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/eliminarono"
        app:switchTextOff="@string/no"
        android:switchTextOn="@string/si"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="language_preference"
        android:title="@string/idioma"
        app:switchTextOff="@string/spanish"
        android:switchTextOn="@string/english"/>

    <Preference
        android:key="about"
        android:title="@string/about" />

    <Preference
        android:key="logout"
        android:title="@string/cerrar" />
</androidx.preference.PreferenceScreen>